plugin global config

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>symbol-annotation</artifactId>
             <version>1.5</version>
         </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
