Add missing dependency "common-validator", required for UrlValidator in global config.

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180130</version>
