--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,13 @@
           <name>Aerogear</name>
         </developer>
     </developers>
-    <!-- Assuming you want to host on @jenkinsci:
-    <url>https://wiki.jenkins.io/display/JENKINS/TODO+Plugin</url>
+    <url>https://github.com/jenkinsci/kryptowire-plugin/tree/master/docs</url>
     <scm>
         <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
     </scm>
-    -->
+    
     <repositories>
         <repository>
             <id>repo.jenkins-ci.org</id>
