--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
           <name>Aerogear</name>
         </developer>
     </developers>
-    <url>https://github.com/jenkinsci/kryptowire-plugin/tree/master/docs</url>
+    <url>https://github.com/jenkinsci/kryptowire-plugin/blob/master/docs/README.adoc</url>
     <scm>
         <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
